--- a/M2/book-shelf/shelf.css
+++ b/M2/book-shelf/shelf.css
@@ -23,7 +23,7 @@ body{
     justify-content: space-between;
     width: 72%;
     margin: 0 auto;
-    padding: .6rem;
+    padding: 0 .6rem 0 .6rem;
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     border-radius: .3rem;
@@ -38,7 +38,7 @@ body{
     border: 1px solid #ccc;
     border-radius: 3px;
     margin-right: .3rem; 
-    width: 90rem;
+    width: 65%;
 }
 
 #searchButton {
@@ -56,7 +56,7 @@ body{
     background-color: #0056b3; 
 }
 
-#home-button, #bookshelf-button, #clear-button {
+#clearButton, #home-button {
     padding: .5rem .7rem;
     font-size:larger;
     background-color: #6c757d;
@@ -67,13 +67,13 @@ body{
     transition: background-color 0.3s ease;
 }
 
-#home-button:hover, #bookshelf-button:hover, #clear-button:hover {
+#clearButton, #home-button:hover {
     background-color: #5a6268; 
 }
 
 /*---------- menu-style-end -------*/
 
-#milestoneTwoResults {
+#bookshelf {
     margin-top: 7rem;
     display: flex;
     flex-wrap: wrap;
